force-app/main/default/objects/Fleet_Forecast__c/Fleet_Forecast__c.object-meta.xml
<CustomObject>
    <description>Single row of fleet forecast</description>
    <label>Fleet Forecast</label>
    <nameField>
        <displayFormat>FF-{000000}</displayFormat>
        <label>Fleet Forecast Period Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fleet Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>