force-app/main/default/objects/Fleet_Forecast__c/fields/Current_fleet_DK__c.field-meta.xml
<CustomField>
    <fullName>Current_fleet_DK__c</fullName>
    <description>Number of DK vehicles of this car group in the fleet at the period beginning</description>
    <inlineHelpText>Number of DK vehicles of this car group in the fleet at the period beginning</inlineHelpText>
    <label>Current fleet - DK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>