force-app/main/default/objects/Fleet_Forecast__c/fields/Current_fleet_Valuta__c.field-meta.xml
<CustomField>
    <fullName>Current_fleet_Valuta__c</fullName>
    <description>Number of valuta vehicles of this car group in the fleet at the period beginning</description>
    <inlineHelpText>Number of valuta vehicles of this car group in the fleet at the period beginning</inlineHelpText>
    <label>Current fleet - Valuta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>