force-app/main/default/objects/Fleet_Forecast__c/fields/Defleet_DK__c.field-meta.xml
<CustomField>
    <fullName>Defleet_DK__c</fullName>
    <description>Number of DK vehicles of the car group planned to be defleeted this period</description>
    <inlineHelpText>Number of DK vehicles of the car group planned to be defleeted this period</inlineHelpText>
    <label>Defleet - DK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>