force-app/main/default/objects/Fleet_Forecast__c/fields/Defleet_Valuta__c.field-meta.xml
<CustomField>
    <fullName>Defleet_Valuta__c</fullName>
    <description>Number of valuta vehicles of the car group planned to be defleeted this period</description>
    <inlineHelpText>Number of valuta vehicles of the car group planned to be defleeted this period</inlineHelpText>
    <label>Defleet - Valuta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>