force-app/main/default/objects/Fleet_Forecast__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <formula>TEXT(Year__c) + &quot;-&quot; + TEXT(Month__c) + &quot;-&quot; + Vehicle_Group__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>