force-app/main/default/objects/Fleet_Forecast__c/fields/Difference_DK__c.field-meta.xml
<CustomField>
    <fullName>Difference_DK__c</fullName>
    <description>Do we need to buy (negative number) or sell (positive number) vehicles in this category?</description>
    <formula>Fleet_at_the_end_DK__c -  Required_at_the_end_DK__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Do we need to buy (negative number) or sell (positive number) vehicles in this category?</inlineHelpText>
    <label>Difference - DK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>