force-app/main/default/objects/Fleet_Forecast__c/fields/Difference_Total__c.field-meta.xml
<CustomField>
    <fullName>Difference_Total__c</fullName>
    <formula>Difference_DK__c +  Difference_Valuta__c</formula>
    <label>Difference - Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>