force-app/main/default/objects/Fleet_Forecast__c/fields/First_Day__c.field-meta.xml
<CustomField>
    <fullName>First_Day__c</fullName>
    <description>first day of this forecasting period</description>
    <inlineHelpText>first day of this forecasting period</inlineHelpText>
    <label>First Day</label>
    <type>Date</type>
</CustomField>