force-app/main/default/objects/Fleet_Forecast__c/fields/Fleet_at_the_end_DK__c.field-meta.xml
<CustomField>
    <fullName>Fleet_at_the_end_DK__c</fullName>
    <description>Fleet status of DK vehicles in this group at the end of the forecast period</description>
    <formula>Current_fleet_DK__c +  Infleet_DK__c -  Defleet_DK__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fleet status of DK vehicles in this group at the end of the forecast period</inlineHelpText>
    <label>Fleet at the end - DK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>