force-app/main/default/objects/Fleet_Forecast__c/fields/Fleet_at_the_end_Valuta__c.field-meta.xml
<CustomField>
    <fullName>Fleet_at_the_end_Valuta__c</fullName>
    <description>Fleet status of valuta vehicles in this group at the end of the forecast period</description>
    <formula>Current_fleet_Valuta__c +  Infleet_Valuta__c - Defleet_Valuta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fleet status of valuta vehicles in this group at the end of the forecast period</inlineHelpText>
    <label>Fleet at the end - Valuta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>