force-app/main/default/objects/Fleet_Forecast__c/fields/Is_Last_Day_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Is_Last_Day_of_Month__c</fullName>
    <description>is the forecast for last day in the month?</description>
    <formula>NOT(MONTH(Last_Day__c) = MONTH(Last_Day__c + 1))</formula>
    <inlineHelpText>is the forecast for last day in the month?</inlineHelpText>
    <label>Is Last Day of Month</label>
    <type>Checkbox</type>
</CustomField>