force-app/main/default/objects/Fleet_Forecast__c/fields/Last_Day__c.field-meta.xml
<CustomField>
    <fullName>Last_Day__c</fullName>
    <description>last day of this forecasting period</description>
    <inlineHelpText>last day of this forecasting period</inlineHelpText>
    <label>Last Day</label>
    <type>Date</type>
</CustomField>