force-app/main/default/objects/Fleet_Forecast__c/fields/Period_Start_Date_formula__c.field-meta.xml
<CustomField>
    <fullName>Period_Start_Date_formula__c</fullName>
    <description>system field to be able to do dynamic filters and reports on a date</description>
    <formula>DATE(VALUE(TEXT(Year__c)),VALUE(TEXT(Month__c)),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>first date of the forecasting month as a date</inlineHelpText>
    <label>Period Start Date (formula)</label>
    <type>Date</type>
</CustomField>