force-app/main/default/objects/Fleet_Forecast__c/fields/Required_at_the_end_Valuta__c.field-meta.xml
<CustomField>
    <fullName>Required_at_the_end_Valuta__c</fullName>
    <description>How many valuta vehicles of that car group we would like to have in total (ST+LT) in this period</description>
    <formula>Short_Term_Valuta__c +  Long_Term_Valuta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How many valuta vehicles of that car group we would like to have in total (ST+LT) in this period</inlineHelpText>
    <label>Required at the end - Valuta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>