force-app/main/default/objects/Fleet_Forecast__c/fields/Short_Term_Valuta__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Valuta__c</fullName>
    <description>How many valuta vehicles of that car group we would like to have in short term in this period</description>
    <inlineHelpText>How many valuta vehicles of that car group we would like to have in short term in this period</inlineHelpText>
    <label>Short Term - Valuta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>