force-app/main/default/objects/Fleet_Forecast__c/fields/Vehicle_Group__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Group of vehicles in this forecast category</description>
    <inlineHelpText>Group of vehicles in this forecast category</inlineHelpText>
    <label>Vehicle Group</label>
    <referenceTo>Vehicle_Group__c</referenceTo>
    <relationshipLabel>Fleet Forecasts</relationshipLabel>
    <relationshipName>Fleet_Forecasts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>