force-app/main/default/objects/Fleet_Forecast__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Description__c</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>Vehicle_Group__c</columns>
    <columns>Difference_DK__c</columns>
    <columns>Difference_Valuta__c</columns>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>