force-app/main/default/objects/Fleet_Forecast__c/listViews/Current_Month_Forecast_Valuta.listView-meta.xml
<ListView>
    <fullName>Current_Month_Forecast_Valuta</fullName>
    <columns>Description__c</columns>
    <columns>Current_fleet_Valuta__c</columns>
    <columns>Fleet_at_the_end_Valuta__c</columns>
    <columns>Short_Term_Valuta__c</columns>
    <columns>Long_Term_Valuta__c</columns>
    <columns>Difference_Valuta__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Period_Start_Date_formula__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Actual</value>
    </filters>
    <label>Current Month Forecast - Valuta</label>
    <sharedTo>
        <group>Forecast</group>
        <group>Procurement</group>
        <group>Re_marketing</group>
    </sharedTo>
</ListView>